[package]
name = "llmeter"
version = "0.1.0"
edition = "2024"
description = "AI コーディングツール（Claude Code / Codex / Cursor）の利用状況をローカルログから集計・可視化する CLI"
repository = "https://github.com/m-tkg/llmeter"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
rayon = "1"
toml = "0.8"
dirs = "5"
sha2 = "0.10"
ureq = { version = "2", features = ["tls"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "llmeter"
path = "src/main.rs"
